syntax = "proto3";

package sum;

option java_package = "com.proto.sum";
option java_multiple_files = true;

message Sum {
    int32 first_num = 1;
    int32 second_num = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service SumService {
    // unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    // error handling
    // this RPC will throw an exception if the sent number is negative
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}
